--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <div class="container-fluid">
-    <div class="card-group">
+    <div class="card-group align-self-center">
 
       <div class="card sedans">
         <img src="images/icon-sedans.svg" alt="sedan image">
